--- a/src/Components/KundenKonto/KundenKonto.css
+++ b/src/Components/KundenKonto/KundenKonto.css
@@ -10,6 +10,7 @@ body{
     margin: 0;
     background-color: rgb(4, 93, 105);
     min-height: 100vh;
+  
 }
 .form{
    
@@ -20,6 +21,7 @@ body{
     width: 400px;
     max-width: 100%;
     padding: 30px 40px;
+    height: 100%;
 }
 .form-header{
  background-color: #f7f7f7;
@@ -32,8 +34,8 @@ margin-bottom: 20px;
     margin: 0;
 }
 .form-inputs{
-    padding-bottom: 20px;
-    margin-bottom: 10;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
     position: relative;
 }
 .form-inputs label{
@@ -58,5 +60,14 @@ margin-bottom: 20px;
     margin-bottom: 10px;
     font-family: inherit;
     font-size: 16px;
-    background-color: rgb(126, 156, 255);
+    background-color: rgb(108, 189, 139);
+}
+.success{
+ 
+    color: green;
+}
+.error{
+    
+    
+    color: red;
 }
