--- a/src/Components/KundenKonto/KundenKonto.css
+++ b/src/Components/KundenKonto/KundenKonto.css
@@ -1,5 +1,11 @@
-.form{
+.form-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
    
+}
+.form{
+  
     font-size: 16px;
     background-color: white;
     border-radius: 5px;
@@ -23,6 +29,7 @@ margin-bottom: 20px;
     padding-bottom: 10px;
     margin-bottom: 20px;
     position: relative;
+    text-align: left;
 }
 .form-inputs label{
     display: inline-block;
