--- a/src/Components/Shop/Shop.css
+++ b/src/Components/Shop/Shop.css
@@ -29,7 +29,7 @@
 }
 
 .card .box h4 {
-  color: crimson;
+  color: darkblue;
 }
 .card .box button {
   width: 100%;
@@ -43,4 +43,53 @@
   cursor: pointer;
   text-transform: uppercase;
   letter-spacing: 2px;
+}
+
+/* ******** Cart ******** */
+.cart {
+  position: relative;
+  border: 1px solid #ccc;
+  transform: scaleY(0.98);
+}
+
+.cart img {
+  width: 250px;
+  height: 200px;
+}
+
+.amount span {
+  color: darkgreen;
+  padding: 0 20px;
+}
+.amount .count {
+  width: 40px;
+  height: 30px;
+  border: 1px solid #555;
+  outline: none;
+  background: #555;
+  cursor: pointer;
+}
+.delete {
+  position: absolute;
+  top: 0;
+  right: 5px;
+  color: darkred;
+  cursor: pointer;
+  font-weight: 900;
+}
+.total {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.total a {
+  background: #333;
+  color: white;
+  padding: 10px 25px;
+}
+.total h3 {
+  margin-right: 50px;
+  color: crimson;
 }
