--- a/src/Components/Service/Service.css
+++ b/src/Components/Service/Service.css
@@ -36,15 +36,19 @@ body{
      height: auto;
      width: 100%;
  }
- .bike-h2{
-    margin-top: 50px;
-    margin-right: 480px;
-    margin-bottom: 50px;
-    margin-left: 480px;
-    background-color: antiquewhite;
+ .service-h1{
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     padding: 10px 0;
+     margin-top: 20px;
+     margin-bottom: 10px;
+     background-color: rgb(21, 78, 52);
+     color: white;
+     font-family: sans-serif;
  }
-
 
  .bike-h3{
      color: green;
+     margin: 15px;
  }
